--- a/views/weeding.edge
+++ b/views/weeding.edge
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MeelIndia: INVITED TO THE WEEDING OF | Ishwar & Vaishnavi | 21st January 2021 | Adarsh Mangal Karyalay Sillod Rod, Pishor.</title>
+    <title>MeelIndia: Invited to The weeding of | ISHWAR & VAISHNAVI | 21st January 2021 | Adarsh Mangal Karyalay Sillod Rod, Pishor.</title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -89,7 +89,7 @@
             margin-top: 16vh;
       }
       h1{
-          font-size: 1.5em;
+          font-size: 1.7em;
       }
       .h5{
           font-size:1em; 
@@ -123,7 +123,7 @@
         <div class="col-md-8 offset-md-2 mb-2 text-center">
             
             <div class="d-flex justify-content-center">
-                    <a class="socialbtn d-flex row text-dark" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20%20https://meelindia.com/weeding"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                    <a class="socialbtn d-flex row text-dark" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20card%20develop%20by%20MeelIndia%20%20https://meelindia.com/weeding"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
                     {{--  <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>   --}}
                     <a class="socialbtn d-flex row text-dark" onclick='myFunction("meelindia.com/weeding");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
                     <a class="socialbtn d-flex row text-dark" onclick="doCapture();" > <i class="fa fa-download" aria-hidden="true"></i></a>
