--- a/views/weeding.edge
+++ b/views/weeding.edge
@@ -37,6 +37,9 @@
           font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
           text-shadow: 0 2px 4px black;
       }
+      #inviteBody{
+          height: auto;
+      }
       img{
           position: absolute;
           top: 0;
@@ -89,7 +92,7 @@
             margin-top: 16vh;
       }
       h1{
-          font-size: 1.7em;
+          font-size: 2em;
       }
       .h5{
           font-size:1em; 
@@ -104,7 +107,7 @@
 
     
     <div class="container-fluid">
-        <div class="pt-2">
+        <div class="">
             <div class="col-md-4 offset-md-4 card" id="inviteBody">
                 <img src="./premium/weeding.png" alt="">
                 <div class="col-md-12 data">
