--- a/views/weeding.edge
+++ b/views/weeding.edge
@@ -92,10 +92,10 @@
             margin-top: 16vh;
       }
       h1{
-          font-size: 1.8em;
+          font-size: 1.7em;
       }
       .h5{
-          font-size:1em; 
+          font-size:.8em; 
       }
       .btn-sm{
           font-size: .7em;
