--- a/views/weeding.edge
+++ b/views/weeding.edge
@@ -117,22 +117,22 @@
                     <h1 class="text-center text-white"> <i> Vaishnavi </i> </h1>
                     <p class="text-white text-center col-10 offset-1 mb-2">A happy marriage is a long conversation which always seems too short!</p>
                     <p class="text-white text-center col-10 offset-1 h5"> <b> 21st January 2021 <br> START AT 12:35 PM </b> </p>
-                    <p class="text-white text-center col-10 offset-1 ">  Address : Adarsh Mangal Karyalay <br> Sillod Rod, Pishor. <br>  <input type="button" class="btn btn-outline-light mt-3 btn-sm" onclick="window.location='https://maps.app.goo.gl/CkRizkk8qoLygqbT6' " value="Open Location on Map"> </p>
+                    <p class="text-white text-center col-10 offset-1 ">  Address : Adarsh Mangal Karyalay <br> Sillod Rod, Pishor. <br>  </p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-6 offset-md-3 mt-5">
+    <div class="col-md-6 offset-md-3 mt-5 pt-5">
         <div class="col-md-8 offset-md-2 mb-2 text-center">
+            <input type="button" class=" pt-2 pb-2 mt-2 mb-2 btn  btn-primary" value="Locate on Map"  onclick="window.location='https://maps.app.goo.gl/CkRizkk8qoLygqbT6' ">
             
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center ">
                     <a class="socialbtn d-flex row text-dark" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20card%20develop%20by%20MeelIndia%20%20https://meelindia.com/weeding"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
                     {{--  <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>   --}}
                     <a class="socialbtn d-flex row text-dark" onclick='myFunction("meelindia.com/weeding");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
                     <a class="socialbtn d-flex row text-dark" onclick="doCapture();" > <i class="fa fa-download" aria-hidden="true"></i></a>
                   
-                    <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn  btn-primary" value="Locate"  onclick="window.location='https://maps.app.goo.gl/CkRizkk8qoLygqbT6' ">
-            </div>
+                </div>
             <div class="d-flex justify-content-center">
             </div>
             <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-4 mb-5 btn-block" onclick="window.location='https://meelindia.com/SignUpUser'">
