--- a/views/weeding.edge
+++ b/views/weeding.edge
@@ -122,7 +122,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 offset-md-3 mt-5 pt-5">
+    <div class="col-md-6 offset-md-3 mt-5 ">
         <div class="col-md-8 offset-md-2 mb-2 text-center">
             <input type="button" class=" pt-2 pb-2 mt-2 mb-2 btn  btn-primary" value="Locate on Map"  onclick="window.location='https://maps.app.goo.gl/CkRizkk8qoLygqbT6' ">
             
