--- a/views/ajayShital.edge
+++ b/views/ajayShital.edge
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MeelIndia: Invited to The weeding of | ISHWAR & VAISHNAVI | 21st January 2021 | Adarsh Mangal Karyalay Sillod Rod, Pishor.</title>
+    <title>MeelIndia: Invited to The weeding of | Ajay & Shital | 25st January 2021 | Shri. Sai Moksh Resort & Lawn</title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
