--- a/views/ajayShital.edge
+++ b/views/ajayShital.edge
@@ -7,7 +7,7 @@
     <title>MeelIndia: Invited to The weeding of | Ajay & Shital | 25st January 2021 | Shri. Sai Moksh Resort & Lawn</title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
-    
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -97,7 +97,7 @@
             <input type="button" class=" pt-2 pb-2 mt-2 mb-2 btn  btn-primary" value="Locate on Map"  onclick="window.location='https://goo.gl/maps/wXtsFweT95itmLaN7' ">
             
             <div class="d-flex justify-content-center ">
-                    <a class="socialbtn d-flex row text-dark" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20card%20develop%20by%20MeelIndia%20%20https://meelindia.com/weeding"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                    <a class="socialbtn d-flex row text-dark" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20card%20develop%20by%20MeelIndia%20%20https://meelindia.com/ajayShital"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
                     {{--  <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>   --}}
                     <a class="socialbtn d-flex row text-dark" onclick='myFunction("meelindia.com/ajayShital");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
                     <a class="socialbtn d-flex row text-dark" href="./premium/ajayshital.jpeg" download> <i class="fa fa-download" aria-hidden="true"></i></a>
