--- a/views/ajayShital.edge
+++ b/views/ajayShital.edge
@@ -76,6 +76,7 @@
       }
       img{
           width: 100%;
+          margin-left: 0%;
 
       }
      
@@ -86,11 +87,9 @@
 
     
     <div class="container-fluid">
-        <div class="">
-            <div class="col-md-6 offset-md-3  mt-1 card" id="inviteBody">
+            <div class="col-md-6 offset-md-3 mt-1" id="inviteBody">
                 <img src="./premium/ajayshital.jpeg"  alt="">
             </div>
-        </div>
     </div>
     <div class="col-md-6 offset-md-3 mt-2 ">
         <div class="col-md-8 offset-md-2 mb-2 text-center">
