--- a/views/about.edge
+++ b/views/about.edge
@@ -7,7 +7,9 @@
 <style>
 body
 {
-    background: url("Images/bgaboutus.jpg") center no-repeat;
+    /* background: linear-gradient(salmon, ); */
+    min-height: 100vh;
+  /* fallback for old browsers */
 }
 
 .footer-content {
@@ -99,7 +101,7 @@ body
             <div class="footer-content-about animate-bottom">
                 <h4>About Us</h4>
                 <p>
-                    Meel India is part of Preneurs Group. You can make digital invitation card or digital greeting card on this meel india website. You can make any type of E-Card on this page.
+                    Meelindia is the first ever initiative started by preneurs group which will help you generating unique kind of digital cards. Our aim is to make creating and sending invitations as well as greetings easier than before. This will benefit to both the event organizer as well as guest. It will also save time of guests in getting the event location. This will save lots of paper and trees. Our ambition is to make things digital one by one. This is initiated under innovation and incubation, digital India and also make in India. We also have some value added services according to need of customers.
                 </p>
      
             </div>
