--- a/views/accountCreated.edge
+++ b/views/accountCreated.edge
@@ -13,6 +13,8 @@
             <br>
             <h5>Please check you Email Inbox to activate your account.</h5>
             <br>
+            <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" onclick=" window.location='/signInUser' " value="Sign In">
+
         </div>
     </div>
 </div>
