--- a/views/accountActivated.edge
+++ b/views/accountActivated.edge
@@ -13,7 +13,8 @@
             <br>
             <h5>Now You can Sing In </h5>
             <br>
-            <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" data-toggle="modal" data-target="#signInModal" value="Sign In">
+            {{--  <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" data-toggle="modal" data-target="#signInModal" value="Sign In">  --}}
+            <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" onclick=" window.location='/signInUser' " value="Sign In">
         </div>
     </div>
 </div>
