--- a/views/accountActivated3.edge
+++ b/views/accountActivated3.edge
@@ -12,7 +12,8 @@
             <h2>Account Deactivated Successfully </h2>
             <br>
             <br>
-            <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" data-toggle="modal" data-target="#signInModal" value="Sign In">
+            <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" onclick=" window.location='/signInUser' " value="Sign In">
+            {{--  <input type="button"  class="btn btn-outline-primary btn-lg btn-block m-3" data-toggle="modal" data-target="#signInModal" value="Sign In">  --}}
         </div>
     </div>
 </div>
