--- a/views/contact.edge
+++ b/views/contact.edge
@@ -2,4 +2,17 @@
 
 @section('content')
 
+<div class="col-md-6 offset-md-3 mt-5 shadowme bg-danger pb-5 pt-5 text-light">
+    <h1 class="text-center display-4">
+        Contact Us
+    </h1>
+    <h3 class="text-center">
+        Thanks for your interest in Meelindia. For more information, feel free to get in touch and We will get back to you soon!
+        <br>
+        We are with you always..!!!!!
+    <br> <br>
+        Write us on meelindiagroup@gmail.com (support mail)
+    
+    </h3>
+</div>
 @endsection
