--- a/views/invitation.edge
+++ b/views/invitation.edge
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
   
-    <title> MeelIndia Invitation : {{ invitations[0].title   }} : {{ invitations[0].subtitle   }} </title>
+    <title> MeelIndia Invitation | {{ invitations[0].subtitle   }} | {{ invitations[0].title   }}  </title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -43,101 +43,154 @@
     @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
 
-        body{
-            background:#E5E5E5;
-            overflow-x: hidden;
-        }
-        input{
-            font-family: 'play', cursive;
-        }
-        .invite{
-            min-height: 550px;
-            width: 350px;
-            margin:auto;
-            background: cover;
-            font-family: 'Caveat', cursive;
-        }   
-        .Caveat{
-            font-family: 'Caveat', cursive;
-        }
-        #bgInvite{
-            width: 350px;
-            padding: 0;
-            margin-top: 0;
-        }
-        .dataInvite{
-            width: 100%;
-        }
-        .inputInvite{
-            width: 350px;
-        }
-        .shadowme{
-            box-shadow: 2px 2px 10px ;
-        }
-        
-.socialbtn
-{
-    border: none;
-    background: transparent;
-    font-size: 2em;
-    margin: 15px;
+body{
+    overflow-x: hidden;
+    background: linear-gradient(salmon, #78ffd6);
+}
+.socialbtn{
+       text-decoration: none;
+       color: black;
+}
+.socialbtn:hover{
+    color: dodgerblue;
     cursor: pointer;
-    transition: 0.2s;
-    
+}
+.btn-primary
+{
+    font-family: 'Amaranth', sans-serif;
+    background: #000;
+    border: #000;
+}
+h1{
+    font-size: 4em;
+    font-family: 'play', cursive;
+    color: #76BAA1;
+    text-shadow: 1px 2px 5px;
 }
 
-.socialbtn:hover{
-    color: #37A079;
+.headingmain
+{
+    font-family: 'Righteous', cursive;
+    color: #000;
+    font-size: 100px;
+}    
+
+.subheadingmain
+{
+    font-family: 'Cookie', cursive;
+    font-size: 35px;
 }
-    
-.socialrow
+.btn-danger
+{
+    font-family: 'Amaranth', sans-serif;
+}
+
+
+
+#inviteBody{
+    min-height: 700px;
+    width: 350px;
+    margin:auto;
+    background: cover;
+    font-family: 'Dancing Script', cursive;
+    background: url('{{ invitations[0].bg }}');
+    background-size:100% 100% ;
+    padding-top: 350px;
+}   
+#inviteBody{
+    box-shadow: 0px 2px 10px black;
+    margin-bottom: 20px;
+}
+#bgInvite{
+    width: 350px;
+    position: absolute;
+    padding: 0;
+    margin-top: 0;
+    z-index: 1;
+    display: none;
+}
+.dataInvite{
+    width: 100%;
+}
+.inputInvite{
+    width: 350px;
+    z-index: 9;
+
+}
+
+.changeclass
 {
     text-align: center;
+    padding: 20px;
+}
+
+.forpadding
+{
+    padding-top: 20px;
+    
+}
+.search-input {
+font-family:'play';
+
+}
+.search-input,
+.leaflet-control-search {
+    max-width:450px;
+    background: black;
+    padding:5px;
+}
+
+@media(max-width:522px)
+{
+        
+    .headingmain
+    {
+        font-size: 50px;
+    }    
+    .subheadingmain
+    {
+        font-size: 25px;
+    }
+
 }
 
 </style>
 </head>
 <body>
 <div class="containetr">
-    <div class="row">
-        <div class="col-12 text-center">
-            <input type="button" value="MeelIndia" onclick="window.location='/'" class="btn btn-primary m-2">
-            <input type="button" value="Profile" onclick="window.location='/profileUser'"class="btn btn-primary m-2">
-        </div>
-    </div>
+   
     <div class="col-md-6 offset-md-3 pb-5">
         <div class="row">
             @each(dt in invitations)
             <div class="col-md-12 mt-5">
-                <div class="col-md-8 offset-md-2 mb-2 text-center">
-                        <div class="d-flex justify-content-center">
-                            <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
-                            <input type="text" id="title" name="title" class="form-control ml-1 ytedit d-inline inputInvite text-center" value="https://meelindia.com/invitation?id={{dt._id}}" placeholder=""> 
-                        </div>
-                        <div class="d-flex justify-content-center">
-                                <a class="socialbtn d-flex row" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                                <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
-                                <!-- <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>  -->
-                                <a class="socialbtn d-flex row text-primary" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
-                                <a class="socialbtn d-flex row text-primary" onclick="doCapture();" > <i class="fa fa-download" aria-hidden="true"></i></a>
-                              
-                        </div>
-                </div> 
+              
                 <div class="invite bg-light shadowme" id="inviteBody">
-                    <img src="{{dt.bg}}" id="bgInvite" alt="">
+                    {{--  <img src="{{dt.bg}}" id="bgInvite" alt="">  --}}
                     <div class="dataInvite">
-                        <h5 class="text-center" id="head">Celebrating</h5>
-                        <h4 class="col-12 Caveat inputInvite text-center" style="font-family:{{ dt.nameFont}}"> {{ dt.title }}</h4>
                         <h5 class="col-12  Caveat inputInvite text-center" style="font-family:{{ dt.subFont}}">{{ dt.subtitle }}</h5>
+                        <h4 class="col-12 Caveat inputInvite text-center h1" style="font-family:{{ dt.nameFont}}"> {{ dt.title }}</h4>
                         <p class="col-12 Caveat inputInvite text-center" style="font-family:{{ dt.bodyFont}}">{{ dt.content}} </p>
                         <h4 class="col-12 inputInvite text-center" id="dateTime">  </h4>
                     </div>
                 </div> 
+                <div class="col-md-8 offset-md-2 mb-2 text-center">
+                    <div class="d-flex justify-content-center">
+                            <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-success" m-2 value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
+                   
+                            <a class="socialbtn h1 d-flex  m-2" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                            <a class="socialbtn h1 d-flex  m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                            <!-- <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>  -->
+                            <a class="socialbtn h1 d-flex  m-2" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
+                            <a class="socialbtn h1 d-flex  m-2" onclick="doCapture();" > <i class="fa fa-download" aria-hidden="true"></i></a>
+                          
+                    </div>
+            </div> 
                 
         </div>
              
             @endeach
-            <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-4 mb-5 btn-block" onclick="window.location='SignUpUser'">
+            <input type="button" value="MeelIndia Home" class="btn btn-danger mt-2 mb-1 col-md-5" onclick="window.location='profileUser'">
+            <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-2 mb-1 col-md-5 offset-md-2" onclick="window.location='SignUpUser'">
             <br> <br>
             
 
