--- a/views/invitationCreate.edge
+++ b/views/invitationCreate.edge
@@ -35,6 +35,7 @@ crossorigin=""></script>
 		color: #76BAA1;
 		text-shadow: 1px 2px 5px;
 	}
+   
     .headingmain
     {
         font-family: 'Righteous', cursive;
@@ -57,23 +58,31 @@ crossorigin=""></script>
         color: #000;
     }
 	
-    .invite{
-        min-height: 600px;
+    #inviteBody{
+        min-height: 700px;
         width: 350px;
         margin:auto;
         background: cover;
         font-family: 'Dancing Script', cursive;
+        /* background: url( "./invitationBg/birthday.svg"); */
+        background-size:100% 100% ;
+        padding-top: 350px;
     }   
     #bgInvite{
         width: 350px;
+        position: absolute;
         padding: 0;
         margin-top: 0;
+        z-index: 1;
+        display: none;
     }
     .dataInvite{
         width: 100%;
     }
     .inputInvite{
         width: 350px;
+        z-index: 9;
+
     }
 
     .changeclass
@@ -97,10 +106,26 @@ crossorigin=""></script>
         background: black;
         padding:5px;
     }
-    
+    ul{
+        overflow: auto;
+    }
+    .invite-list li {
+        font-size: 1em;
+        
+    }
+    .invite-list i {
+        background: rgba(0,0,0,.9);
+        margin: 0 15px;
+        padding: 15px;
+        border-radius: 30px;
+        color: #fff;
+        font-size: 3em;
+        border:2px solid #DC143C; 
+        box-shadow: 0 2px 15px salmon;
+        cursor: pointer;
+    }
     @media(max-width:522px)
     {
-                
         .headingmain
         {
             font-size: 50px;
@@ -111,7 +136,8 @@ crossorigin=""></script>
         }
 
     }
-    
+
+
 </style>
 <div class="container-fluid">
    <div class="row">
@@ -123,29 +149,20 @@ crossorigin=""></script>
     <br>
        <div class="col-md-4"></div>
     <div class="col-md-4 changeclass">
-        <h5 class="d-inline">Select Type of Invitation : </h5>
-        <button type="button" class="btn btn-primary dropdown-toggle d-inline" data-toggle="dropdown">
-            Type
-          </button>
-        <div class="dropdown-menu">
-        <input type="button" onclick="inviteBirthday()" class="dropdown-item" value="Birthday">
-        <input type="button" onclick="inviteWedding()" class="dropdown-item" value="Wedding">
-        <input type="button" onclick="inviteAnniversary()" class="dropdown-item" value="Anniversary">
-        <input type="button" onclick="inviteInnogration()" class="dropdown-item" value="Innogration">
-        <input type="button" onclick="inviteEngagement()" class="dropdown-item" value="Engagement">
-        <input type="button" onclick="inviteOther()" class="dropdown-item" value="Other">
-    </div>
+       
+        
     <div class="forpadding">
             <h5 class="d-inline">Change Fonts : </h5>
         <button type="button" class="btn btn-primary dropdown-toggle d-inline" data-toggle="dropdown">
             Fonts
           </button>
         <div class="dropdown-menu">
-            <input type="button" onclick="changeNameFont()" class="dropdown-item" value="Change Name Font">
+                <input type="button" onclick="changeNameFont()" class="dropdown-item" value="Change Name Font">
+            
+                <input type="button" onclick="changeBodyFont()" class="dropdown-item" value="Change Body Font">
         
-            <input type="button" onclick="changeBodyFont()" class="dropdown-item" value="Change Body Font">
-    
-            <input type="button" onclick="changeSubFont()" class="dropdown-item" value="Change Sub Title Font">
+                <input type="button" onclick="changeSubFont()" class="dropdown-item" value="Change Sub Title Font">
+                
             </div>
 
         </div>
@@ -153,13 +170,32 @@ crossorigin=""></script>
     </div>
     <div class="row">
     <div class="col-md-6 p-1 col-sm-6 ibd">
+        <div class="col-md-12">
+            <ul class="d-flex text-center invite-list" style="text-decoration:none; list-style:none">
+                <li class="text-dark h1" onclick="inviteBirthday()"><i class="text-success fa fa-birthday-cake mb-2 mt-3" aria-hidden="true"> </i> <br> Birthday</li>
+                <li class="text-dark h1" onclick="inviteWedding()"><i class="text-primary fa fa-gift mb-2 mt-3" aria-hidden="true"> </i> <br> Wedding</li>
+                <li class="text-dark h1" onclick="inviteAnniversary()"><i class="text-danger fa fa-heartbeat mb-2 mt-3" aria-hidden="true"> </i> <br> Anniversary</li>
+                <li class="text-dark h1" onclick="inviteInnogration()"><i class="text-warning fa fa-openid mb-2 mt-3" aria-hidden="true"> </i> <br> Innogration</li>
+                <li class="text-dark h1" onclick="inviteEngagement()"><i class="text-info fa fa-heart mb-2 mt-3" aria-hidden="true"> </i> <br> Engangement</li>
+                <li class="text-dark h1" onclick="inviteOther()"><i class="text-light fa fa-caret-square-o-up mb-2 mt-3" aria-hidden="true"> </i> <br> Other </li>
+            </ul>
+        </div>
+                
+        <ul class="d-flex " style="text-decoration:none; list-style:none">
+                <li class="col-md-4"> <input type="button" onclick="changeNameFont()" class=" btn btn-primary bg-primary" value="Change Name Font"> </li>
+            
+                <li class="col-md-4"> <input type="button" onclick="changeBodyFont()" class=" btn btn-primary bg-primary" value="Change Body Font"> </li>
+        
+                <li class="col-md-4"> <input type="button" onclick="changeSubFont()" class=" btn btn-primary bg-primary" value="Change Sub Title Font"> </li>
+        </ul>      
         <div class="invite bg-light shadowme" id="inviteBody">
             <img src="" id="bgInvite" alt="">
             <div class="dataInvite">
-                <h5 class="text-center" id="head">Celebrating</h5>
-                <input type="text" id="title" name="title" class="ytedit h4 inputInvite text-center" value="" placeholder=""> 
                 <input type="text" id="subtitle" name="subtitle" class="ytedit p inputInvite text-center" value="" placeholder=""> 
-                <textarea rows="4" id="content" name = "content"  class="ytedit form-control p inputInvite text-center"  id="content">The fun of a special day is incomplete without the presence of our friends. You are most cordially invited to our baby’s birthday party!
+                {{--  <input type="text" id="title" name="title" class="ytedit h1 inputInvite text-center" value="" placeholder="">   --}}
+                <textarea rows="2" id="title" name = "title"  class="ytedit form-control  inputInvite text-center " style="font-size:2em;"  id="content">
+                </textarea><br>
+                <textarea rows="4" id="content" name = "content"  class="ytedit form-control  inputInvite text-center"  id="content">The fun of a special day is incomplete without the presence of our friends. You are most cordially invited to our baby’s birthday party!
                 </textarea><br>
                 <input type="datetime-local" class="ytedit form-control p inputInvite text-center" name="dateTime" id="dateTime"  value="2021-06-12T19:30">
             </div>
@@ -192,54 +228,82 @@ crossorigin=""></script>
     </div>
    </div>
 </div>
+
+<div class="container bg-danger pt-4 pb-4 mt-5 rounded shadowme">
+    
+    <form action="invitationCustomCreateDB" class="col-md-8 offset-md-2 text-light " enctype="multipart/form-data" method="POST">
+        <h2 class="text-center mt-3  text-white">Create / Upload Your Own Invitation</h2>
+        <hr>
+        <div class="form-group mt-3 h4">
+          <label for="title">Invitation Title :</label>
+          <input type="text" class="form-control" id="title" name="title" aria-describedby="title" placeholder="Enter Invitation Title" required>
+        </div>
+        <div class="custom-file">
+            <input type="file" class="custom-file-input"  name="image" id="customFile">
+            <label class="custom-file-label" id="image" for="customFile">Choose file</label>
+
+            <input type="datetime-local" class="mt-2 form-control p inputInvite text-center" name="dateTime" id="dateTime"  value="2021-06-12T19:30" required>
+
+        </div>
+        <div class="form-group mt-3 h4">
+            <label for="exampleInputEmail1">Location :
+                Select the destination on map or you can upload lattitude and longitude here.
+            </label>
+            <input type="text" class="form-control mt-2" id="lat2" name="lat" placeholder="Enter lattitude" required>
+            <input type="text" class="form-control mt-2" id="lng2" name="lng" placeholder="Enter longitude" required>
+          </div>
+        <button type="submit" class="btn btn-success mt-3 col-md-4">Submit</button>
+    </form>
+
+</div>
 <script>
     var bgImg, type, nameFont = " Dancing Script, cursive",bodyFont= " Dancing Script, cursive",subFont =  " Dancing Script, cursive";
  
     function inviteBirthday(){
-        document.getElementById("bgInvite").src = "./InviteBG/invites/birthday.png";
-        bgImg = "./InviteBG/invites/birthday.png";
-        document.getElementById("title").placeholder  = "Enter Your Name";
-        document.getElementById("subtitle").placeholder = "Birthday Year ( e.g. 22th Birthday )";
+        document.getElementById("inviteBody").style.backgroundImage = "url('./invitationBg/birthday.svg')";
+        bgImg = "./invitationBg/birthday.svg";
+        document.getElementById("title").value  = "Enter Your Name";
+        document.getElementById("subtitle").placeholder = "Birthday Year ( e.g. 22th Birthday of )";
         document.getElementById("content").value = "The fun of a special day is incomplete without the presence of our friends. You are most cordially invited to our baby’s birthday party!";
         type = "birthday";
     }
     function inviteWedding(){
-        document.getElementById("bgInvite").src = "./InviteBG/invites/wedding.png";
-        bgImg = "./InviteBG/invites/wedding.png";
-        document.getElementById("title").placeholder  = "Bride and Groom Names";
-        document.getElementById("subtitle").placeholder = "Enter the Subtitle";
-        document.getElementById("content").value = "A happy marriage is a long conversation which always seems too short";
+        document.getElementById("inviteBody").style.backgroundImage = "url('./invitationBg/wedding.svg')";
+        bgImg = "./invitationBg/Wedding.svg";
+        document.getElementById("title").value  = "Bride and Groom Names";
+        document.getElementById("subtitle").placeholder = "Together With Their Family";
+        document.getElementById("content").value = "Requested The Pleasure of Your Company To Celebrate Their Marriage.";
         type = "Wedding";
     }
     function inviteAnniversary(){
-        document.getElementById("bgInvite").src = "./InviteBG/invites/anniversary.png";
-        bgImg = "./InviteBG/invites/anniversary.png";
-        document.getElementById("title").placeholder  = "Anniversary Year ( 25th Anniversary )";
+        document.getElementById("inviteBody").style.backgroundImage = "url('./invitationBg/anniversary.svg')";
+        bgImg = "./invitationBg/anniversary.svg";
+        document.getElementById("title").value  = "Anniversary Year ";
         document.getElementById("subtitle").placeholder = "Whose Anniversary";
         document.getElementById("content").value = "We request the pleasure of your company at our wedding anniversary party. Please come and grace this occasion as we celebrate 20 years of our marriage and bonding.";
         type = "anniversary";
     }
     function inviteInnogration(){
-        document.getElementById("bgInvite").src = "./InviteBG/invites/innogration.png";
-        bgImg = "./InviteBG/invites/innogration.png";
-        document.getElementById("title").placeholder  = "The Grand Opening of";
+        document.getElementById("inviteBody").style.backgroundImage = "url('./invitationBg/innogration.svg')";
+        bgImg = "./invitationBg/innogration.svg";
+        document.getElementById("title").value  = "The Grand Opening of";
         document.getElementById("subtitle").placeholder = "Enter the Name ";
         document.getElementById("content").value = "You have been with us from the very start and it is apt that you stand along with us on our newly fashioned store’s grand opening day. See you on [date] from [time] to [time] [location and address]. ";
         type = "innogration";
 
     }
     function inviteEngagement (){
-        document.getElementById("bgInvite").src = "./InviteBG/invites/engagement.png";
-        bgImg = "./InviteBG/invites/engagement.png";
-        document.getElementById("title").placeholder  = "Enter the Names ";
+        document.getElementById("inviteBody").style.backgroundImage = "url('./invitationBg/engangement.svg')";
+        bgImg = "./invitationBg/engangement.svg";
+        document.getElementById("title").value  = "Enter the Names ";
         document.getElementById("subtitle").placeholder = "Enter the subtitle";
         document.getElementById("content").value = "Enter the Desription.";
         type = "innogration";
     }
     function inviteOther(){
-        document.getElementById("bgInvite").src = "./InviteBG/invites/other.png";
-        bgImg = "./InviteBG/invites/other.png";
-        document.getElementById("title").placeholder  = "Enter the Title";
+        document.getElementById("inviteBody").style.backgroundImage = "url('./invitationBg/other.svg')";
+        bgImg = "./invitationBg/other.svg";
+        document.getElementById("title").value  = "Enter the Title";
         document.getElementById("subtitle").placeholder = "Enter the subtitle";
         document.getElementById("content").value = "Enter the Desription.";
         type = "other";
@@ -289,6 +353,10 @@ crossorigin=""></script>
                 hlng = position.lng;
                 document.getElementById('lat').value = hlat;
                 document.getElementById('lng').value = hlng;
+                
+                document.getElementById('lat2').value = hlat;
+                document.getElementById('lng2').value = hlng;
+
                 alert('Location is Set.');
             }
 
@@ -320,6 +388,7 @@ crossorigin=""></script>
                     latt = e.latlng.lat;
                     lngg = e.latlng.lng;
                     document.getElementById('demo').innerHTML = "Latitude: " + latt + "<br>Longitude: " + lngg;
+                    
             });
           
             map.addControl(search);
@@ -335,6 +404,9 @@ crossorigin=""></script>
                         hlng = chagedPos.lng;
                         document.getElementById('lat').value = hlat;
                         document.getElementById('lng').value = hlng;
+                                
+                        document.getElementById('lat2').value = hlat;
+                        document.getElementById('lng2').value = hlng;
                         document.getElementById('demo').innerHTML = "Latitude: " + hlat + 
                         "<br>Longitude: " + hlng;
                         console.log(loc1);
