--- a/views/layout/app.edge
+++ b/views/layout/app.edge
@@ -16,9 +16,9 @@
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
       
-
-
-      
+    html{
+      scroll-behavior: smooth;
+    }      
     body {
       margin: 0;
       padding: 0;
